--- a/app/src/main/res/layout/activity_hide_head_test.xml
+++ b/app/src/main/res/layout/activity_hide_head_test.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zu.customview.view.HideHeadView
+<com.zu.customview.view.HideHeadLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -33,4 +33,4 @@
                 <!--android:nestedScrollingEnabled="true"/>-->
         <!--</LinearLayout>-->
     <!--</ScrollView>-->
-</com.zu.customview.view.HideHeadView>
+</com.zu.customview.view.HideHeadLayout>
