--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,5 +10,12 @@
     <style name="AppThemeDark" parent="Theme.AppCompat" />
     <style name="AppThemeLight" parent="Theme.AppCompat.Light" />
     <style name="AppThemeLight.DarkActionBar" parent="Theme.AppCompat.Light.DarkActionBar" />
-
+    <style name="PopHorAnim">
+        <item name="android:windowEnterAnimation">@anim/poptip_scale_left_in</item>
+        <item name="android:windowExitAnimation">@anim/poptip_scale_left_out</item>
+    </style>
+    <style name="PopVerAnim">
+        <item name="android:windowEnterAnimation">@anim/poptip_scale_top_in</item>
+        <item name="android:windowExitAnimation">@anim/poptip_scale_top_out</item>
+    </style>
 </resources>
