--- a/app/src/main/res/layout/activity_frame_layout_test.xml
+++ b/app/src/main/res/layout/activity_frame_layout_test.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,31 +7,21 @@
 
     tools:context="com.zu.customview.FrameLayoutTest"
     android:id="@+id/Frame_root">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+
+    <Button
+        android:id="@+id/Frame_button_press"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:alpha="1"
+        android:text="press"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/Frame_button_check"
-            android:text="check"
-            android:alpha="1"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/Frame_button_press"
-            android:text="press"
-            android:alpha="1"/>
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="#ff9865"
-            android:id="@+id/Frame_imageView"/>
-
-    </LinearLayout>
-
-
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
