--- a/app/src/main/res/drawable/round_back_release.xml
+++ b/app/src/main/res/drawable/round_back_release.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval"
-
     xmlns:android="http://schemas.android.com/apk/res/android" >
+    <gradient android:angle="90" android:startColor="#927bd0" android:endColor="#b27cd6"
+        />
 
-    <solid android:color="#ffff0000"></solid>
     <size android:height="20dp" android:width="20dp"></size>
 </shape>
