--- a/app/src/main/res/layout/activity_wave_button.xml
+++ b/app/src/main/res/layout/activity_wave_button.xml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:orientation="vertical"
     tools:context="com.zu.customview.WaveButtonActivity">
+    <com.zu.customview.view.FlowRadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:id="@+id/wave_activity_flow_radio_group">
+
+
+    </com.zu.customview.view.FlowRadioGroup>
     <com.zu.customview.view.RoundWaveButton
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:autoAnimWave="true"
         app:timeInterval="500"
         app:interpolator="@android:interpolator/linear"
-        app:tailLength="3000dp"
+        app:tailLength="30dp"
+        app:speed="5"
         app:waveColor="#aa0000ff"
         app:animaAlpha="true"
         >
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
             android:layout_gravity="center"
-            android:background="@drawable/red_circle"
-
+            android:background="@drawable/bg_unable_to_hear_button"
+            android:text="声音消失了"
             />
     </com.zu.customview.view.RoundWaveButton>
-</FrameLayout>
+
+</LinearLayout>
