--- a/app/src/main/res/layout/activity_wave_button.xml
+++ b/app/src/main/res/layout/activity_wave_button.xml
@@ -12,9 +12,13 @@
         android:orientation="horizontal"
         android:paddingBottom="10dp"
         android:id="@+id/wave_activity_flow_radio_group">
-
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="3dp"
+            android:text="x"/>
 
     </com.zu.customview.view.FlowRadioGroup>
+
     <com.zu.customview.view.RoundWaveButton
         android:layout_width="match_parent"
         android:layout_height="match_parent"
