--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,11 @@
                 android:layout_height="wrap_content"
                 android:text="WaveButton"
                 android:id="@+id/wave_button_activity"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SwitchButton"
+                android:id="@+id/switch_button_activity"/>
         </LinearLayout>
     </ScrollView>
 
