--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,6 +116,11 @@
                 android:layout_height="wrap_content"
                 android:text="SwitchButton"
                 android:id="@+id/switch_button_activity"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SwitchLayout"
+                android:id="@+id/switch_layout_activity"/>
         </LinearLayout>
     </ScrollView>
 
