--- a/app/src/main/res/values/attrs_text_indicator.xml
+++ b/app/src/main/res/values/attrs_text_indicator.xml
@@ -3,7 +3,7 @@
     <declare-styleable name="TextViewPagerIndicator">
         <attr name="textColor" format="color"/>
         <attr name="selectedTextColor" format="color"/>
-        <attr name="backgroundColor" format="color"/>
+        <attr name="backgroundColor"/>
         <attr name="textSize"/>
         <attr name="indicatorColor" format="color"/>
         <attr name="indicatorHeight" format="dimension"/>
