--- a/app/src/main/res/layout/activity_try.xml
+++ b/app/src/main/res/layout/activity_try.xml
@@ -21,38 +21,46 @@
             app:layout_constraintBottom_toTopOf="@+id/tv_now_time"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp"
-                >
+                android:background="#ff00ff"
+                android:clickable="true">
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:id="@+id/iv_left_playing"
                     android:layout_gravity="right"
+                    android:background="#ffffff"
                     />
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:id="@+id/iv_left_play"
+                    android:background="#ffffff"
                     android:layout_gravity="center_vertical|right"/>
             </FrameLayout>
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:clickable="true"
+                android:background="#ffff00">
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:background="#ffffff"
                     android:id="@+id/iv_right_playing"
                     />
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:background="#ffffff"
                     android:layout_gravity="center_vertical"
                     android:id="@+id/iv_right_play"
                     />
@@ -79,7 +87,7 @@
             android:id="@+id/sb_play_progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onStopTrackingTouch=""
+
             app:layout_constraintBottom_toTopOf="@+id/ll_control_container" />
         <LinearLayout
             android:layout_width="match_parent"
@@ -122,6 +130,8 @@
                 android:id="@+id/iv_play_previous"
                 android:layout_gravity="center"
                 android:scaleType="centerInside"
+                android:clickable="true"
+                android:onClick="@{() -> handler.onPlayPreviousClicked()}"
                 android:src="@mipmap/bg_play_previous"/>
             <ImageView
                 android:layout_width="40dp"
@@ -129,15 +139,19 @@
                 android:id="@+id/iv_play_or_pause"
                 android:src="@mipmap/bg_play"
                 android:layout_gravity="center"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="20dp"
                 android:scaleType="centerInside"
-                android:layout_marginRight="15dp"/>
+                android:clickable="true"
+                android:onClick="@{() -> handler.onPlayClicked()}"
+                android:layout_marginRight="20dp"/>
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:id="@+id/iv_play_next"
                 android:scaleType="centerInside"
                 android:layout_gravity="center"
+                android:clickable="true"
+                android:onClick="@{() -> handler.onPlayNextClicked()}"
                 android:src="@mipmap/bg_play_next"
                 />
         </LinearLayout>
