--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,6 +126,11 @@
                 android:layout_height="wrap_content"
                 android:text="Try Incus"
                 android:id="@+id/try_activity"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="WebView"
+                android:id="@+id/webview_activity"/>
         </LinearLayout>
     </ScrollView>
 
