--- a/app/src/main/res/values/attrs_common.xml
+++ b/app/src/main/res/values/attrs_common.xml
@@ -17,4 +17,8 @@
     <attr name="drawableSrc" format="reference"/>
     <attr name="backgroundColor" format="color"/>
     <attr name="switchPercent" format="float"></attr>
+    <attr name="selectedTextColor" format="color"/>
+    <attr name="indicatorDrawable" format="reference"/>
+    <attr name="indicatorColor" format="color"/>
+    <attr name="indicatorHeight" format="dimension"/>
 </resources>
