--- a/app/src/main/res/layout/activity_frame_layout_test.xml
+++ b/app/src/main/res/layout/activity_frame_layout_test.xml
@@ -6,22 +6,42 @@
     android:layout_height="match_parent"
 
     tools:context="com.zu.customview.FrameLayoutTest"
-    android:id="@+id/Frame_root">
+    android:id="@+id/Frame_root"
+    >
 
     <Button
         android:id="@+id/Frame_button_press"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintDimensionRatio="1:1"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:alpha="1"
+        android:shadowColor="#ff0000"
+        android:shadowDx="10.0"
+        android:shadowDy="10.0"
+        android:background="@drawable/button_font_black_sides_round"
         android:text="press"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/oval5_copy"
+        android:text="ushdjhadujshdauwjshduawkjshdjakwndkjnchwakdjskjbcawdjabsckjsbakjbdnwbdasbbcj"/>
 
 
 </android.support.constraint.ConstraintLayout>
