--- a/app/src/main/res/values/attrs_text_indicator.xml
+++ b/app/src/main/res/values/attrs_text_indicator.xml
@@ -2,11 +2,11 @@
 <resources>
     <declare-styleable name="TextViewPagerIndicator">
         <attr name="textColor" format="color"/>
-        <attr name="selectedTextColor" format="color"/>
+        <attr name="selectedTextColor"/>
         <attr name="backgroundColor"/>
         <attr name="textSize"/>
-        <attr name="indicatorColor" format="color"/>
-        <attr name="indicatorHeight" format="dimension"/>
+        <attr name="indicatorColor"/>
+        <attr name="indicatorHeight"/>
         <attr name="intervalBetweenTags" format="dimension"/>
         <attr name="textPadding"/>
         <attr name="textPaddingTop"/>
@@ -17,7 +17,7 @@
             <enum name="line" value="0"/>
             <enum name="background" value="1"/>
         </attr>
-        <attr name="indicatorDrawable" format="reference"/>
+        <attr name="indicatorDrawable"/>
         <attr name="balanceLayout" format="boolean"/>
     </declare-styleable>
 </resources>
