修改了一堆依赖问题

--- a/app/src/main/res/layout/activity_try.xml
+++ b/app/src/main/res/layout/activity_try.xml
@@ -8,7 +8,7 @@
             name="handler"
             type="com.zu.customview.TryActivity.EventHandler"/>
     </data>
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -72,6 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/sb_play_progress" />
 
         <TextView
@@ -155,5 +156,5 @@
                 android:src="@mipmap/bg_play_next"
                 />
         </LinearLayout>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
