--- a/app/src/main/res/values/attrs_change_size_tab_indicator.xml
+++ b/app/src/main/res/values/attrs_change_size_tab_indicator.xml
@@ -4,7 +4,7 @@
         <attr name="textSize"/>
         <attr name="selectTextSize" format="dimension"/>
         <attr name="textColor"/>
-        <attr name="selectTextColor"/>
+        <attr name="selectTextColor" format="color"/>
         <attr name="textMarginInterval" format="dimension"/>
         <attr name="indicatorHeight"/>
         <attr name="indicatorColor"/>
